--- a/app/src/main/res/menu/main_menu_navigation.xml
+++ b/app/src/main/res/menu/main_menu_navigation.xml
@@ -21,7 +21,7 @@
                         android:icon="@drawable/ic_baseline_flag_24"/>
                     <item
                         android:id="@+id/nav_category"
-                        android:title="món ăn"
+                        android:title="Món ăn"
                         android:icon="@drawable/ic_baseline_reorder_24"/>
 
                     <item
