--- a/app/src/main/res/layout/displayhome_layout.xml
+++ b/app/src/main/res/layout/displayhome_layout.xml
@@ -16,26 +16,10 @@
             android:orientation="vertical"
             android:paddingBottom="20dp" >
 
-            <TextView
-                android:layout_gravity="center"
-                android:id="@+id/txt_welcom_XinChao"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="Danh mục"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textAllCaps="true"
-                android:layout_margin="10dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal" >
 
