--- a/app/src/main/res/layout/custom_layout_displaytable.xml
+++ b/app/src/main/res/layout/custom_layout_displaytable.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/lightwhite"
@@ -21,7 +22,9 @@
         android:layout_height="120dp"
         android:layout_below="@+id/txt_customtable_TenBanAn"
         android:background="@color/colorPrimary"
-        android:src="@drawable/ic_baseline_weekend_24" />
+        android:src="@drawable/ic_baseline_weekend_24"
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/img_customtable_GoiMon"
