--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Activities.WelcomeActivity"
     android:orientation="vertical"
-    android:padding="30dp"
+    android:paddingHorizontal="30dp"
     android:background="@color/white" >
 
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/pic_logo" />
 
     <TextView
@@ -80,5 +80,22 @@
             android:transitionName="transition_signup"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="50dp">
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/NoCopyRight"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center|bottom"
+        android:layout_marginBottom="5dp"
+        android:textStyle="italic"
+        android:text="Ⓒ Power by \nTran Dinh Phuc \nNguyen Trung Nghia" />
 
 </LinearLayout>
